// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFieldLine: Category - id 1`] = `false`;

exports[`getFieldLine: Category - name 1`] = `
Object {
  "attributes": undefined,
  "comment": undefined,
  "id": "name",
  "type": "String",
}
`;

exports[`getFieldLine: Category - posts 1`] = `
Object {
  "attributes": "@relation(references: [id])",
  "comment": undefined,
  "id": "posts",
  "type": "Post[]",
}
`;

exports[`getFieldLine: Post - author 1`] = `
Object {
  "attributes": "@relation(fields: [authorId], references: [id])",
  "comment": undefined,
  "id": "author",
  "type": "User",
}
`;

exports[`getFieldLine: Post - authorId 1`] = `
Object {
  "attributes": undefined,
  "comment": undefined,
  "id": "authorId",
  "type": "Int",
}
`;

exports[`getFieldLine: Post - categories 1`] = `
Object {
  "attributes": "@relation(references: [id])",
  "comment": undefined,
  "id": "categories",
  "type": "Category[]",
}
`;

exports[`getFieldLine: Post - createdAt 1`] = `
Object {
  "attributes": "@default(now())",
  "comment": undefined,
  "id": "createdAt",
  "type": "DateTime",
}
`;

exports[`getFieldLine: Post - id 1`] = `false`;

exports[`getFieldLine: Post - published 1`] = `
Object {
  "attributes": "@default(false)",
  "comment": undefined,
  "id": "published",
  "type": "Boolean",
}
`;

exports[`getFieldLine: Post - title 1`] = `
Object {
  "attributes": undefined,
  "comment": undefined,
  "id": "title",
  "type": "String",
}
`;

exports[`getFieldLine: Profile - bio 1`] = `
Object {
  "attributes": undefined,
  "comment": undefined,
  "id": "bio",
  "type": "String",
}
`;

exports[`getFieldLine: Profile - id 1`] = `false`;

exports[`getFieldLine: Profile - user 1`] = `
Object {
  "attributes": "@relation(fields: [userId], references: [id])",
  "comment": undefined,
  "id": "user",
  "type": "User",
}
`;

exports[`getFieldLine: Profile - userId 1`] = `
Object {
  "attributes": "@unique",
  "comment": undefined,
  "id": "userId",
  "type": "Int",
}
`;

exports[`getFieldLine: User - email 1`] = `
Object {
  "attributes": "@unique",
  "comment": undefined,
  "id": "email",
  "type": "String",
}
`;

exports[`getFieldLine: User - id 1`] = `false`;

exports[`getFieldLine: User - name 1`] = `
Object {
  "attributes": undefined,
  "comment": undefined,
  "id": "name",
  "type": "String?",
}
`;

exports[`getFieldLine: User - posts 1`] = `
Object {
  "attributes": undefined,
  "comment": undefined,
  "id": "posts",
  "type": "Post[]",
}
`;

exports[`getFieldLine: User - profile 1`] = `
Object {
  "attributes": undefined,
  "comment": undefined,
  "id": "profile",
  "type": "Profile?",
}
`;

exports[`getFieldLine: User - role 1`] = `
Object {
  "attributes": "@default(USER)",
  "comment": undefined,
  "id": "role",
  "type": "Role",
}
`;

exports[`getFieldLine: UserWithMap - email 1`] = `
Object {
  "attributes": "@unique @map(\\"user_email\\") @db.VarChar(100)",
  "comment": "Generator comment",
  "id": "email",
  "type": "String",
}
`;

exports[`getFieldLine: UserWithMap - id 1`] = `
Object {
  "attributes": "@id @default(autoincrement()) @map(\\"user_id\\")",
  "comment": undefined,
  "id": "id",
  "type": "Int",
}
`;

exports[`getFieldLine: UserWithMap - name 1`] = `
Object {
  "attributes": "@map(\\"user_name\\")",
  "comment": "Generator pre-comment",
  "id": "name",
  "type": "String?",
}
`;

exports[`getFieldLine: UserWithPrimaryKey - email 1`] = `
Object {
  "attributes": "@unique",
  "comment": undefined,
  "id": "email",
  "type": "String",
}
`;

exports[`getFieldLine: UserWithPrimaryKey - id 1`] = `false`;

exports[`getFieldLine: UserWithPrimaryKey - name 1`] = `
Object {
  "attributes": undefined,
  "comment": undefined,
  "id": "name",
  "type": "String?",
}
`;
